@@ -7,6 +7,7 @@
     - In printing code, removed absolute constants and repalced them to be relative to page size
     - Fixed bugs that caused pages > 1 to have less contents than first page
     - Silences are now also printed in tablature mode; makes them easier to follow
+    - Many other readability improvements to tablature printing
     - Misc tweaks and fixes
 - Adding and removing tracks no more confuse the undo system
 - The "undo" menu is now chattier about what is next to undo
